--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "scripts": {
     "lint": "eslint .",
+    "logs": "tail -f logs/assistant.log | pino-pretty",
     "dev": "pnpm --filter assistant run dev"
   },
   "devDependencies": {
@@ -19,7 +20,7 @@
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.4.0"
   },
-  "packageManager": "pnpm@9.9.0+sha512.60c18acd138bff695d339be6ad13f7e936eea6745660d4cc4a776d5247c540d0edee1a563695c183a66eb917ef88f2b4feb1fc25f32a7adcadc7aaf3438e99c1",
+  "packageManager": "pnpm@9.10.0+sha512.73a29afa36a0d092ece5271de5177ecbf8318d454ecd701343131b8ebc0c1a91c487da46ab77c8e596d6acf1461e3594ced4becedf8921b074fbd8653ed7051c",
   "dependencies": {
     "hono": "^4.5.11"
   }
