--- a/services/assistant/package.json
+++ b/services/assistant/package.json
@@ -20,6 +20,8 @@
     "p-queue": "^8.0.1",
     "pino": "^9.4.0",
     "play-sound": "^1.1.6",
+    "zigbee-herdsman": "0.57.3",
+    "zigbee-herdsman-converters": "20.12.1",
     "zod": "^3.23.8"
   }
 }
