--- a/services/assistant/package.json
+++ b/services/assistant/package.json
@@ -14,12 +14,15 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.12.2",
+    "@serialport/bindings-cpp": "^12.0.1",
     "dotenv": "^16.4.5",
     "hono": "^4.5.11",
+    "node-hid": "^3.1.0",
     "openai": "^4.58.1",
     "p-queue": "^8.0.1",
     "pino": "^9.4.0",
     "play-sound": "^1.1.6",
+    "usb": "^2.13.0",
     "zigbee-herdsman": "0.57.3",
     "zigbee-herdsman-converters": "20.12.1",
     "zod": "^3.23.8"
