--- a/services/assistant/package.json
+++ b/services/assistant/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "typecheck": "tsc --noEmit",
     "local": "tsx watch src/local.ts | pino-pretty",
+    "start": "tsx src/server.ts",
     "dev": "tsx src/terminal.ts"
   },
   "devDependencies": {
@@ -23,6 +24,7 @@
     "pino": "^9.4.0",
     "play-sound": "^1.1.6",
     "usb": "^2.13.0",
+    "yaml": "^2.5.1",
     "zigbee-herdsman": "0.57.3",
     "zigbee-herdsman-converters": "20.12.1",
     "zod": "^3.23.8"
