--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "lint": "eslint .",
     "logs": "tail -f logs/assistant.log | pino-pretty",
-    "start": "pnpm --filter assistant start",
+    "build": "pnpm -r build",
+    "start": "pm2 start services/assistant/dist/server.js --name assistant",
+    "stop": "pm2 stop assistant",
+    "restart": "pm2 restart assistant",
     "dev": "pnpm --filter assistant run dev"
   },
   "devDependencies": {
@@ -21,8 +24,9 @@
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.4.0"
   },
-  "packageManager": "pnpm@9.10.0+sha512.73a29afa36a0d092ece5271de5177ecbf8318d454ecd701343131b8ebc0c1a91c487da46ab77c8e596d6acf1461e3594ced4becedf8921b074fbd8653ed7051c",
+  "packageManager": "pnpm@9.11.0+sha512.0a203ffaed5a3f63242cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b",
   "dependencies": {
-    "hono": "^4.5.11"
+    "hono": "^4.5.11",
+    "pm2": "^5.4.2"
   }
 }
