--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "type": "module",
   "scripts": {
     "lint": "eslint .",
-    "logs": "tail -f logs/assistant.log | pino-pretty",
+    "logs:app": "tail -f data/logs/assistant.log | pino-pretty",
+    "logs:pm2": "pm2 logs assistant",
     "build": "pnpm -r build",
+    "pm2": "pm2",
     "start": "pm2 start services/assistant/dist/server.js --name assistant",
     "stop": "pm2 stop assistant",
     "restart": "pm2 restart assistant",
