--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "type": "module",
   "scripts": {
     "lint": "eslint .",
-    "logs:app": "tail -f data/logs/assistant.log | pino-pretty",
-    "logs:pm2": "pm2 logs assistant",
+    "logs": "pm2 logs assistant --raw | pino-pretty",
     "build": "pnpm -r build",
     "pm2": "pm2",
     "start": "pm2 start services/assistant/dist/server.js --name assistant",
