--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "pm2": "pm2",
     "start": "pm2 start services/assistant/dist/server.js --name assistant",
     "stop": "pm2 stop assistant",
-    "restart": "pm2 restart assistant",
+    "reload": "pm2 restart assistant",
     "dev": "pnpm --filter assistant run dev"
   },
   "devDependencies": {
